// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<JobStatusIcon /> should render when [pad=false] and [state="cancelled"] 1`] = `
<Status__StyledJobStatus
  pad={false}
>
  <Icon
    color="red"
    faStyle="fas"
    fixedWidth={false}
    name="times fa-fw"
  />
  <span>
    cancelled
  </span>
</Status__StyledJobStatus>
`;

exports[`<JobStatusIcon /> should render when [pad=false] and [state="complete"] 1`] = `
<Status__StyledJobStatus
  pad={false}
>
  <Icon
    color="green"
    faStyle="fas"
    fixedWidth={false}
    name="check fa-fw"
  />
  <span>
    complete
  </span>
</Status__StyledJobStatus>
`;

exports[`<JobStatusIcon /> should render when [pad=false] and [state="error"] 1`] = `
<Status__StyledJobStatus
  pad={false}
>
  <Icon
    color="red"
    faStyle="fas"
    fixedWidth={false}
    name="times fa-fw"
  />
  <span>
    error
  </span>
</Status__StyledJobStatus>
`;

exports[`<JobStatusIcon /> should render when [pad=false] and [state="running"] 1`] = `
<Status__StyledJobStatus
  pad={false}
>
  <Loader
    color="primary"
    size="14px"
  />
  <span>
    running
  </span>
</Status__StyledJobStatus>
`;

exports[`<JobStatusIcon /> should render when [pad=false] and [state="waiting"] 1`] = `
<Status__StyledJobStatus
  pad={false}
>
  <Loader
    color="primary"
    size="14px"
  />
  <span>
    waiting
  </span>
</Status__StyledJobStatus>
`;

exports[`<JobStatusIcon /> should render when [pad=true] and [state="cancelled"] 1`] = `
<Status__StyledJobStatus
  pad={true}
>
  <Icon
    color="red"
    faStyle="fas"
    fixedWidth={false}
    name="times fa-fw"
  />
  <span>
    cancelled
  </span>
</Status__StyledJobStatus>
`;

exports[`<JobStatusIcon /> should render when [pad=true] and [state="complete"] 1`] = `
<Status__StyledJobStatus
  pad={true}
>
  <Icon
    color="green"
    faStyle="fas"
    fixedWidth={false}
    name="check fa-fw"
  />
  <span>
    complete
  </span>
</Status__StyledJobStatus>
`;

exports[`<JobStatusIcon /> should render when [pad=true] and [state="error"] 1`] = `
<Status__StyledJobStatus
  pad={true}
>
  <Icon
    color="red"
    faStyle="fas"
    fixedWidth={false}
    name="times fa-fw"
  />
  <span>
    error
  </span>
</Status__StyledJobStatus>
`;

exports[`<JobStatusIcon /> should render when [pad=true] and [state="running"] 1`] = `
<Status__StyledJobStatus
  pad={true}
>
  <Loader
    color="primary"
    size="14px"
  />
  <span>
    running
  </span>
</Status__StyledJobStatus>
`;

exports[`<JobStatusIcon /> should render when [pad=true] and [state="waiting"] 1`] = `
<Status__StyledJobStatus
  pad={true}
>
  <Loader
    color="primary"
    size="14px"
  />
  <span>
    waiting
  </span>
</Status__StyledJobStatus>
`;
